Fixed links in menu screen

--- a/config/template.html
+++ b/config/template.html
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                     <div id=msf>
-                        <a href=https://js13kgames.com target=_blank>JS13K 2023</a> game by <a href=https://github.com/wiserim >Wiserim</a>
+                        <a href=https://js13kgames.com target=_blank>js13kGames 2023</a> game by <a href=https://github.com/wiserim target=_blank>Wiserim</a>
                     </div>
                 </div>
                 <!--menu screen end-->
