* AI rework * Selected region's info doesn't refresh at the start of the new game.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             #menu-screen p {margin: .5rem 0}
             #msm {display: flex; flex-direction: column; justify-content: center; align-items: center; flex: 1 0 auto}
             #msf {padding: 1rem}
-            #toggle-fullscreen {width: 30px; height: 30px; background: transparent; position: fixed; bottom: 15px; right: 15px; z-index:2}
+            #toggle-fullscreen {width: 30px; height: 30px; background: transparent; position: fixed; bottom: 15px; right: 15px; z-index:2; cursor: pointer}
             #game-screen {display: grid; grid-template-columns: 1fr 400; grid-template-rows: 60px 1fr; width: min(100vw, calc(100vh + 400px)); margin: auto}
             #map-section {display: flex; align-items: center; grid-column: 1; grid-row: 1 / span 2;}
             #menu-section {grid-column: 2; grid-row: 1; justify-content: flex-end; padding: .5rem;}
