--- a/config/template.html
+++ b/config/template.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
-            * {box-sizing: border-box; font-family: 'Segoe Print','Brush Script MT', cursive}
+             * {box-sizing: border-box; font-family: 'Segoe Print','Brush Script MT', cursive}
             body {margin: 0}
             p {margin: 0}
             .d-none {display: none !important}
@@ -49,7 +49,7 @@
             #menu-screen p {margin: .5rem 0}
             #msm {display: flex; flex-direction: column; justify-content: center; align-items: center; flex: 1 0 auto}
             #msf {padding: 1rem}
-            #toggle-fullscreen {width: 30px; height: 30px; background: transparent; position: fixed; bottom: 15px; right: 15px; z-index:2}
+            #toggle-fullscreen {width: 30px; height: 30px; background: transparent; position: fixed; bottom: 15px; right: 15px; z-index:2; cursor: pointer}
             #game-screen {display: grid; grid-template-columns: 1fr 400; grid-template-rows: 60px 1fr; width: min(100vw, calc(100vh + 400px)); margin: auto}
             #map-section {display: flex; align-items: center; grid-column: 1; grid-row: 1 / span 2;}
             #menu-section {grid-column: 2; grid-row: 1; justify-content: flex-end; padding: .5rem;}
