* Replaced game end modal with general purpose info modal. * Before game starts game checks if 2 or more players are set as active. * Bugfix: Starting game with all players disabled is breaking the game.

--- a/index.html
+++ b/index.html
@@ -263,16 +263,16 @@
             </div>
         </div>
         <!--menu modal end-->
-        <!--game end modal-->
-        <div id=game-end-modal class="modal t-center">
+        <!--info-modal-->
+        <div id=info-modal class="modal t-center">
             <div class="modal-body">
                 <div class="modal-content"></div>
                 <div>
-                    <button id=game-end-btn class=btn>Main menu</button>
+                    <button id=close-info-modal-btn class=btn>Close</button>
                 </div>
             </div>
         </div>
-        <!--game end modal end-->
+        <!--info modal end-->
         <!--battle modal-->
         <div id=battle-modal class="modal">
             <div class="modal-body">
